# ai-multi-engine-router

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: generate.py  providers.py  scores.py  telemetry.py
app/config/: routing.json
app/core/: container.py  settings.py
app/providers/: base.py  bootstrap.py  cerebras.py  deepseek.py  gemini.py  groq.py  huggingface.py  mistral.py  mock.py  model_selector.py  ollama.py  openrouter.py  provider_selector.py  registry.py
app/providers/sdk/: __init__.py  factory.py  provider.py  registry.py
app/router/: engine.py  fallback.py
app/schemas/: request.py  response.py
app/scoring/: models.py  service.py
app/services/: generation.py
app/telemetry/: models.py  service.py  store.py
dashboard/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/lp/: page.tsx
dashboard/app/lp/components/: BrainCore.tsx  Header.tsx  HealthBar.tsx  KpiRow.tsx  MainChart.tsx  OperationsCore.tsx  PlaygroundPanel.tsx  ProviderOrbit.tsx  ProviderOverview.tsx  ProvidersPanel.tsx  RuntimeCards.tsx  ScoresPanel.tsx  Sidebar.tsx  StateViews.tsx  StatusPill.tsx  TelemetryPanel.tsx
